# low-level-lab

./: .ccls  .gitignore  README.md  flake.nix
Y86-64/: README.md
Y86-64/rust/: Cargo.toml
Y86-64/rust/src/: disassemble.rs  instructions.rs  lib.rs
arduino/: README.md  shell.nix
arduino/blink/: .gitignore  Makefile  blink.c
beginning-x64-assembly/ch1-hello/: .gitignore  Makefile  hello-gas-intel.S  hello-gas.S  hello.asm  hello.lst
beginning-x64-assembly/ch4-alive/: .gitignore  Makefile  alive.asm  alive.lst  alive2.S  gdb-init  hello4.asm  hello4.lst
beginning-x64-assembly/ch7-jump-loop/: .gitignore  Makefile  jump.S  jumploop.S
beginning-x64-assembly/ch8-memory/: .gitignore  Makefile  memory.S
bootloaders/64-bit-os-barebones/: Makefile  README.md  boot.asm  shell.nix
bootloaders/64-bit-os-barebones/boot/: boot.asm
bootloaders/64-bit-os-barebones/kernel/: kernel.c
bootloaders/osdev-barebones-tutorial/: .gitignore  Makefile  README.md  shell.nix
c/: Makefile
c/assembler/: assembler.c  error.h  parser.c  parser.h  parser_test.c  substring.c
c/unity/: .gitignore
ebpf/: README.md  shell.nix
ebpf/count-user-execve/: count-user-execve.py
ebpf/count-user-syscall/: count-user-syscall.py
ebpf/hello-c/: .gitignore  Makefile  hello.bpf.c  run.sh
ebpf/hello-world/: hello.py
eudyptula/: 02-custom-kernel.md  03-custom-kernel-extraversion.md  10-linux-next-patch.md  14-id-patch.md  README.md
eudyptula/01-hello-world-module/: .gitignore  Makefile  README.md  hello.c
eudyptula/06-misc-char-device-driver/: .gitignore  Makefile  README.md  eudyptula.c
eudyptula/08-debugfs-driver/: .gitignore  Makefile  README.md  eudyptula_debugfs.c
eudyptula/09-sysfs-driver/: .gitignore  Makefile  README.md  eudyptula_sysfs.c
eudyptula/12-linked-list/: .gitignore  Makefile  README.md  linked_list.c
eudyptula/13-list-slab/: .gitignore  Makefile  README.md  diff.patch  list_slab.c
eudyptula/15-new-syscall/: .gitignore  0001-sys-Add-eudyptula-syscall.patch  Makefile  README.md  test_eudyptula.c
eudyptula/17-wee-wait/: .gitignore  Makefile  README.md  wee_wait.c
eudyptula/18-identity-queue/: .gitignore  Makefile  README.md  identity_queue.c  test.sh
flake/: flake.nix  update-and-diff-profiles.sh
kernel-modules/current-task/: .gitignore  Makefile  current_task.c
kernel-modules/hello-world-module/: hello.c
kernel-modules/printk-loglevel-module/: .gitignore  printk_loglevel.c
kernel/hello-world-module/: .gitignore  Makefile  README.md
kernel/printk-loglevel-module/: Makefile
linux-programming-interface/: .ccls  .gitignore  Makefile  README.md  shell.nix
linux-programming-interface/ch12-system-and-process-information/: list_processes.c
linux-programming-interface/ch13-file-io-buffering/: tail.c
linux-programming-interface/ch4-file-io/: .gitignore  Makefile  copy.c  seek_io.c  tee.c
linux-programming-interface/ch6-processes/: .gitignore  Makefile  pid_env.c
linux-programming-interface/ch7-memory-allocation/: .gitignore  Makefile  free_and_sbrk.c
linux-programming-interface/ch8-users-and-groups/: user_group_info.c
linux-programming-interface/lib/: error_functions.c  error_functions.h  lib.h  num_args.c  num_args.h
low-level-programming-c-asm-intel-64/ch10-11-linked-lists/: .gitignore  Makefile  int_list.c  int_list.h  main.c  run-tests.sh
low-level-programming-c-asm-intel-64/ch10-11-linked-lists/tests/: error.stderr  simple.stdout
low-level-programming-c-asm-intel-64/ch13-bmp/: Makefile  bmp.c  bmp.h  image.c  image.h  main.c
low-level-programming-c-asm-intel-64/ch2-assembly/: .gitignore  Makefile  endianness.asm  endianness.asm.lst  hello.asm  hello.asm.lst  lib.asm  lib.asm.lst  print_call.asm  print_call.asm.lst  print_rax.asm  print_rax.asm.lst  strlen.asm  strlen.asm.lst  test_lib.asm  test_lib.asm.lst
low-level-programming-c-asm-intel-64/ch4-mmap/: .gitignore  Makefile  mmap-gas.S  mmap.asm  mmap.asm.lst  test.txt
mastering-embedded-linux-programming/ch2-hello/: Makefile
nand2tetris/c/assembler/: error.h  parser.h  substring.h
nand2tetris/c/unity/: update.sh
nand2tetris/projects/01/: Mux.hdl  Mux16.hdl  Or.hdl  Or8Way.hdl  Xor.hdl
nand2tetris/projects/02/: ALU.hdl  Add16.hdl
nand2tetris/projects/03/a/: RAM64.hdl
nand2tetris/projects/03/b/: RAM16K.hdl  RAM512.hdl
nand2tetris/projects/05/: CPU.hdl  Computer.hdl  Memory.hdl
nand2tetris/rust/src/: lib.rs  misc.rs  vm.rs
ostep/: update-homework.sh
ostep/ch29-lock-based-data-structures/: .gitignore  Makefile  approx_counter.c  approx_counter.h  atomic_counter.c  atomic_counter.h  main.c  mutex_utils.c  mutex_utils.h  nonatomic_counter.c  nonatomic_counter.h
ostep/ch39-coreutils-clones/: .gitignore  CMakeLists.txt  Makefile  cmake-bootstrap.sh  file_utils.c  file_utils.h  myls.c  mystat.c
ostep/homework/ch5-process-api/: Makefile
ostep/homework/cpu-api/: .gitignore  Makefile  fork-pipe.c  fork-shared.c  fork-write-shared.c  fork-write-shared.output  p4.c  p4.output
projects/01/: And.hdl  DMux8Way.hdl
projects/03/a/: PC.hdl  RAM8.hdl
projects/03/b/: RAM4K.hdl
projects/04/fill/: Fill.asm
projects/04/mult/: Mult.asm
rpi-assembly-language-programming/: shell.nix
rpi-assembly-language-programming/ch1-hello/: .gitignore  Makefile  hello.S  hello.c
rust/src/: asm.rs  hack.rs  lib.rs  misc.rs  vm.rs
stm32/: .gitignore  CMakeLists.txt  Makefile  README.md  shell.nix
stm32-c/: .gitignore  CMakeLists.txt  README.md  shell.nix
stm32-c/common/: hd44780u_lcd.h  seven_segment_display.c  system_clock.h  tim2.c  user_button.h  user_led.c  user_led.h
stm32/blink/: .gitignore  Makefile  STM32F401RETx_FLASH.ld  blink.c  blink_timer.c  linker.ld  main.c  vector_table.c
stm32/blink_timer/: main.c
stm32/cmake/: stm32.cmake
stm32/common/: CMakeLists.txt  hd44780u_lcd.c  hd44780u_lcd.h  seven_segment_display.c  seven_segment_display.h  system_clock.c  system_clock.h  tim2.c  tim2.h  usart2.c  usart2.h  user_button.c  user_button.h  user_led.h
stm32/one_digit_7_segment_counter/: main.c
